# devkit

./: .electronignore  .eslintignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .npmignore  .prettierignore  .yarnrc  GETTING_STARTED.md  HOW_TO_CONTINUE.md  PREVIEW.html  PROGRESS_UPDATE.md  PROJECT_INIT_SUMMARY.md  README.md  TODO.md  build.sh  electron-builder.yml  package.json  tools.config.json  tsconfig.json  tsconfig.main.json  tsconfig.main.tsbuildinfo  tsconfig.preload.json  tsconfig.preload.tsbuildinfo  tsconfig.renderer.json  tsconfig.tsbuildinfo  verify-theme-system.sh  vite.config.ts
docs/: AI_REMINDER.md  AI_WORKFLOW.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  INDEX.md  PROJECT_STATUS.md  QUICKSTART.md  ROADMAP.md  SETUP_TROUBLESHOOTING.md  TECH_STACK.md  tool-development.md
docs/summaries/: README.md  WORK_SUMMARY.md  WORK_SUMMARY_10_ERROR_HANDLING.md  WORK_SUMMARY_2.md  WORK_SUMMARY_3.md  WORK_SUMMARY_4.md  WORK_SUMMARY_5_MVP.md  WORK_SUMMARY_6_CONSUMER_GROUP.md  WORK_SUMMARY_7_DASHBOARD.md  WORK_SUMMARY_8_SETTINGS.md  WORK_SUMMARY_9_PERFORMANCE.md
resources/: .gitkeep
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src/common/constants/: ipcChannels.js  ipcChannels.ts
src/common/types/: connection.js  connection.ts  consumerGroup.js  consumerGroup.ts  index.js  index.ts  kafka.js  kafka.ts  message.js  message.ts
src/main/: index.ts
src/main/ipc/: index.ts
src/main/services/: KafkaAdminService.ts  (+4 more)
src/preload/: index.ts  types.d.ts
src/renderer/: index.html
(+50 files in other folders)
